--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,8 @@ tr {
 	margin-left: 10vw;
 }
 
-#purchase-form {
+#order-div {
+	font-size: 2vh;
 	margin-top: 20vh;
 	margin-left: 5vw;
 	margin-right: 5vw;
